# grove

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/alembic/: env.py
backend/app/auth/: __init__.py  identity.py
backend/app/models/: __init__.py  _common.py  config.py  discovery.py  ingestion.py  query.py  runtime.py
backend/app/schemas/: common.py  config.py  discovery.py  ingestion.py  package.py  result_filter.py  runtime.py
backend/app/services/: citation_resolver.py  discovery_runner.py  faithfulness.py  front_matter.py  front_matter_suggest.py  ingestion_oneshot.py  ingestion_runner.py  introspect.py  package.py  query_runner.py  result_filter.py  sinas.py  visibility.py
backend/scripts/: oneshot_ingest.py
backend/tests/: test_call_batching.py  test_ingestion_runner.py  test_matching_documents.py  test_publish_guard.py  test_visibility_checks.py
docs/adrs/: 2026-05-12-runfilter-boolean-knobs.md  2026-05-12-staged-documents.md  2026-05-12-suggest-pipeline-architecture.md  2026-05-14-stateful-filter-on-result.md  README.md  template.md
docs/proposals/: config-export-and-skills-package.md  entity-properties.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Form.tsx  Layout.tsx  PageHeader.tsx
package/: sinas-grove.yaml
scripts/: render-package.sh  start.sh
(+58 files in other folders)
