[tool.poetry]
name = "sinas-grove"
version = "0.1.0"
description = "Stateful, multi-agent document indexing and retrieval on top of Sinas"
authors = ["Sinas Grove contributors"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = { extras = ["email"], version = "^2.7" }
pydantic-settings = "^2.3"
httpx = "^0.27"
python-multipart = "^0.0.9"
sinas = { extras = ["fastapi"], version = ">=0.1.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
black = "^24"
ruff = "^0.6"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
